--- a/videoskip.html
+++ b/videoskip.html
@@ -1508,6 +1508,20 @@ dragElement(blurBox);
 dragElement(screenShot);
 
 blurBox.style.display = 'none'
+
+console.log("Loaded");
+const params = new URLSearchParams(window.location.search);
+const video = params.get("video");
+if (video !== null ) {
+  console.log("found video:" + video);
+  var videoNode = document.querySelector('video');
+  videoNode.src = video;
+  ready(function(){
+    cuts = PF_SRT.parse(skipBox.value);
+    setActions();
+    makeTimeLabels()
+  })
+}
 </script>
 </body>
 </html>
